--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Excluir carpetas de datos vinculantes
-00_Data/
-02_OOp/
-inofmap-ubuntu/
+*.lnk
+infomap-ubuntu/
 
 # Excluir el archivo de configuración YAML
 config.yml
