--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 # Excluir carpetas de datos vinculantes
 *.lnk
-infomap-ubuntu/
-/00_Data.lnk
-/02_Op.lnk
-/infomap-ubuntu.lnk
+00_Data
+02_Op
+infomap-ubuntu
 
 # Excluir el archivo de configuración YAML
 config.yml
